@@ -101,6 +101,7 @@ enum mosq_err_t {
 	MOSQ_ERR_TIMEOUT = 27,
 	MOSQ_ERR_RETAIN_NOT_SUPPORTED = 28,
 	MOSQ_ERR_TOPIC_ALIAS_INVALID = 29,
+	MOSQ_ERR_ADMINISTRATIVE_ACTION = 30,
 };
 
 /* Option values */
