@@ -9,6 +9,8 @@ _mosquitto_client_protocol
 _mosquitto_client_protocol_version
 _mosquitto_client_sub_count
 _mosquitto_client_username
+_mosquitto_kick_client_by_clientid
+_mosquitto_kick_client_by_username
 _mosquitto_log_printf
 _mosquitto_property_add_binary
 _mosquitto_property_add_byte
