@@ -300,12 +300,19 @@ void do_disconnect(struct mosquitto_db *db, struct mosquitto *context, int reaso
 					case MOSQ_ERR_KEEPALIVE:
 						log__printf(NULL, MOSQ_LOG_NOTICE, "Client %s has exceeded timeout, disconnecting.", id);
 						break;
+					case MOSQ_ERR_ADMINISTRATIVE_ACTION:
+						log__printf(NULL, MOSQ_LOG_NOTICE, "Client %s been disconnected by administrative action.", id);
+						break;
 					default:
 						log__printf(NULL, MOSQ_LOG_NOTICE, "Socket error on client %s, disconnecting.", id);
 						break;
 				}
 			}else{
-				log__printf(NULL, MOSQ_LOG_NOTICE, "Client %s disconnected.", id);
+				if(reason == MOSQ_ERR_ADMINISTRATIVE_ACTION){
+					log__printf(NULL, MOSQ_LOG_NOTICE, "Client %s been disconnected by administrative action.", id);
+				}else{
+					log__printf(NULL, MOSQ_LOG_NOTICE, "Client %s disconnected.", id);
+				}
 			}
 		}
 		mux__delete(db, context);
